Final fixes for the new remote config