@@ -1,8 +1,14 @@
 package com.github.vatbub.hearingaid;
 
+import android.content.Context;
+import android.content.SharedPreferences;
+
 import com.github.vatbub.common.core.Config;
 
+import java.io.File;
+import java.io.FileOutputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URL;
 
 /**
@@ -10,19 +16,51 @@ import java.net.URL;
  */
 
 public class RemoteConfig {
+    private static final String defaultConfigFileName = "default_config.properties";
+    private static final String configAppVersionKey = "configSavedWithAppVersion";
     private static Config config;
 
-    public static void initConfig() {
+    public static void initConfig(Context context) {
         if (config != null) return;
         try {
-            config = new Config(new URL("https://raw.githubusercontent.com/vatbub/HearingAidAndroid/master/app/src/main/assets/default_config.properties"), new URL("file:///android_asset/default_config.properties"), "remote_config.properties");
+            copyDefaultConfigToUserMemoryIfNotPresent(context);
+            config = new Config(new URL("https://raw.githubusercontent.com/vatbub/HearingAidAndroid/master/app/src/main/assets/" + defaultConfigFileName), getCopyOfDefaultConfig(context).toURI().toURL(), true, "remote_config.properties", true);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
 
+    private static void copyDefaultConfigToUserMemoryIfNotPresent(Context context) throws IOException {
+        InputStream configInputStream = null;
+        FileOutputStream fileOutputStream = null;
+
+        try {
+            SharedPreferences sharedPreferences = context.getSharedPreferences(BuildConfig.APPLICATION_ID + ".RemoteConfigInfo", Context.MODE_PRIVATE);
+            File copyDestination = getCopyOfDefaultConfig(context);
+            if (sharedPreferences.getInt(configAppVersionKey, BuildConfig.VERSION_CODE) <= BuildConfig.VERSION_CODE && copyDestination.exists())
+                return;
+
+            configInputStream = context.getAssets().open(defaultConfigFileName);
+            fileOutputStream = new FileOutputStream(copyDestination, false);
+
+            byte[] buffer = new byte[1024];
+            int length;
+            while ((length = configInputStream.read(buffer)) != -1) {
+                fileOutputStream.write(buffer, 0, length);
+            }
+        } finally {
+            if (configInputStream != null)
+                configInputStream.close();
+            if (fileOutputStream != null)
+                fileOutputStream.close();
+        }
+    }
+
+    private static File getCopyOfDefaultConfig(Context context) {
+        return new File(context.getCacheDir(), defaultConfigFileName);
+    }
+
     public static Config getConfig() {
-        initConfig();
         return config;
     }
 
